Tue Jul 13 10:27:35 2004  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c, gui/greeter/greeter_parser.c,
	  gui/greeter/greeter_system.c:  Use "Shut _Down" instead of
	  "Shut_down" consistently.  This string was already being used
	  so it doesn't add any new strings

	* daemon/gdm.c, daemon/getvt.c: Add FreeBSD support for VTAllocation
	  from Alexander Nedotsukov <bland@FreeBSD.org>

	* docs/C/gdm.xml: Add mention that VTAllocation now works on FreeBSD
	  as well.

Fri Jun 11 10:46:46 2004  George Lebl <jirka@5z.com>

	* Release 2.6.0.3

Mon Jun 07 09:17:23 2004  George Lebl <jirka@5z.com>

	* config/XKeepsCrashing: Add system-config-display and also check
	  for system-config-mouse.  FC2 is utter shit when it comes to
	  failing X server anyway so on my test machine system-config-display
	  don't work none anyway, but such is life, maybe it'll work for
	  someone (but FC2 of course doesn't run that on X errors anyway).

	* gui/gdmsetup.c: replace hacks with lesser hacks

Tue Jun 01 11:24:46 2004  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c, gui/greeter/greeter_item_canvas.c,
	  gui/greeter/greeter.c, gui/gdmchooser.c, gui/gdmcommon.[ch]:
	  on non-local displays, and on displays other then the primary
	  :0 display, disable cursor blinking after 20 seconds of
	  inactivity as it eats bandwidth and cpu for nothing.
	  Should fix #135764

	* gui/gdmwm.c: minor cosmetic cleanup

Fri May 28 12:53:42 2004  George Lebl <jirka@5z.com>

	* config/XKeepsCrashing, config/PreSession.in,
	  config/PostSession.in, config/Xsession.in, config/Default.in:
	  Don't use which but our own private shell version since solaris
	  which is broken when there is no TTY.  Fixes #133245, partly
	  based on a patch by Brian Cameron

Fri May 28 12:35:22 2004  George Lebl <jirka@5z.com>

	* gui/gdmsetup.c, config/Makefile.am: solaris chown doesn't like 
	  a dot separator but : is the standard separator and works for
	  gnu chown as well, so switch to that.  Thanks to