@@ -171,6 +171,9 @@ AllowRemoteAutoLogin=false
 # 0 is the most anal, 1 allows group write permissions, 2 allows all write
 # permissions
 RelaxPermissions=0
+# Check if directories are owned by logon user.  Set to false, if you have, for
+# example, home directories owned by some other user.
+CheckDirOwner=true
 # Number of seconds to wait after a bad login
 #RetryDelay=1
 # Maximum size of a file we wish to read.  This makes it hard for a user to DoS
