@@ -1,3 +1,12 @@
+Wed Jul 14 09:37:25 2004  George Lebl <jirka@5z.com>
+
+	* Patch from Andreas Schubert <andreas.schubert@mathema.de>
+
+	* daemon/filecheck.c, daemon/gdm.[ch]:  Add a CheckDirOwner key
+	  to fix systems which have non-user-owned home dirs.
+
+	* config/gdm.conf.in, doc/C/gdm.xml: Document the above addition.
+
 Tue Jul 13 10:27:35 2004  George Lebl <jirka@5z.com>
 
 	* gui/gdmlogin.c, gui/greeter/greeter_parser.c,
